kubernetes/sonarqube/sonarservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
spec:
  selector:
    app: sonarqube
  ports:
  - name: http
    port: 80
    targetPort: 9000
  type: NodePort
